--- a/gitno1.html
+++ b/gitno1.html
@@ -1,1 +1,44 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Simple Shop</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta name="description" content="A small demo e-commerce storefront using only HTML, CSS and JS">
+</head>
+<body>
+    <header class="site-header">
+        <div class="brand">Simple Shop</div>
+        <div class="controls">
+            <input id="search" placeholder="Search products..." aria-label="Search products">
+            <button id="cart-toggle" aria-label="Open cart">Cart (<span id="cart-count">0</span>)</button>
+        </div>
+    </header>
+
+    <main class="container">
+        <aside class="filters">
+            <h3>Categories</h3>
+            <select id="category-filter">
+                <option value="all">All</option>
+            </select>
+        </aside>
+
+        <section class="products" id="products"></section>
+    </main>
+
+    <div id="cart" class="cart">
+        <div class="cart-header">
+            <h3>Your Cart</h3>
+            <button id="cart-close">Close</button>
+        </div>
+        <ul id="cart-items" class="cart-items"></ul>
+        <div class="cart-footer">
+            <div class="total">Total: $<span id="cart-total">0.00</span></div>
+            <button id="checkout">Checkout</button>
+        </div>
+    </div>
+
+    <script src="script.js" defer></script>
+</body>
+</html>
